--- a/Notebooks/trabalhoII.ipynb
+++ b/Notebooks/trabalhoII.ipynb
@@ -435,6 +435,217 @@
     "\n",
     "df.tail(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "216a1f18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Nome da Variável  Quantidade de Dados Nulos\n",
+      "0            Row ID                          0\n",
+      "1          Order ID                          0\n",
+      "2        Order Date                          0\n",
+      "3         Ship Date                          0\n",
+      "4         Ship Mode                          0\n",
+      "5       Customer ID                          0\n",
+      "6     Customer Name                          0\n",
+      "7           Segment                          0\n",
+      "8           Country                          0\n",
+      "9              City                          0\n",
+      "10            State                          0\n",
+      "11      Postal Code                          0\n",
+      "12           Region                          0\n",
+      "13       Product ID                          0\n",
+      "14         Category                          0\n",
+      "15     Sub-Category                          0\n",
+      "16     Product Name                          0\n",
+      "17            Sales                          0\n",
+      "18         Quantity                          0\n",
+      "19         Discount                          0\n",
+      "20           Profit                          0\n"
+     ]
+    }
+   ],
+   "source": [
+    "dados_nulos = df.isnull().sum()\n",
+    "\n",
+    "\n",
+    "tabela_nulos = pd.DataFrame({\n",
+    "    'Nome da Variável': dados_nulos.index,\n",
+    "    'Quantidade de Dados Nulos': dados_nulos.values\n",
+    "})\n",
+    "\n",
+    "\n",
+    "print(tabela_nulos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bd3447b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datas não convertidas (nulos após conversão):\n",
+      "Order Date    0\n",
+      "Ship Date     0\n",
+      "dtype: int64\n",
+      "Número de registros duplicados: 0\n",
+      "\n",
+      "Valores únicos em Ship Mode:\n",
+      "Ship Mode\n",
+      "Standard Class    5968\n",
+      "Second Class      1945\n",
+      "First Class       1538\n",
+      "Same Day           543\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores únicos em Segment:\n",
+      "Segment\n",
+      "Consumer       5191\n",
+      "Corporate      3020\n",
+      "Home Office    1783\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores únicos em Country:\n",
+      "Country\n",
+      "United States    9994\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores únicos em Region:\n",
+      "Region\n",
+      "West       3203\n",
+      "East       2848\n",
+      "Central    2323\n",
+      "South      1620\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores únicos em Category:\n",
+      "Category\n",
+      "Office Supplies    6026\n",
+      "Furniture          2121\n",
+      "Technology         1847\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores únicos em Sub-Category:\n",
+      "Sub-Category\n",
+      "Binders        1523\n",
+      "Paper          1370\n",
+      "Furnishings     957\n",
+      "Phones          889\n",
+      "Storage         846\n",
+      "Art             796\n",
+      "Accessories     775\n",
+      "Chairs          617\n",
+      "Appliances      466\n",
+      "Labels          364\n",
+      "Tables          319\n",
+      "Envelopes       254\n",
+      "Bookcases       228\n",
+      "Fasteners       217\n",
+      "Supplies        190\n",
+      "Machines        115\n",
+      "Copiers          68\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Valores únicos para 'Country':\n",
+      "['United States']\n",
+      "\n",
+      "Descontos fora do padrão (esperado entre 0 e 0.8):\n",
+      "Empty DataFrame\n",
+      "Columns: [Row ID, Order ID, Order Date, Ship Date, Ship Mode, Customer ID, Customer Name, Segment, Country, City, State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales, Quantity, Discount, Profit]\n",
+      "Index: []\n",
+      "\n",
+      "[0 rows x 21 columns]\n",
+      "\n",
+      "Valores negativos:\n",
+      "Empty DataFrame\n",
+      "Columns: [Row ID, Order ID, Order Date, Ship Date, Ship Mode, Customer ID, Customer Name, Segment, Country, City, State, Postal Code, Region, Product ID, Category, Sub-Category, Product Name, Sales, Quantity, Discount, Profit]\n",
+      "Index: []\n",
+      "\n",
+      "[0 rows x 21 columns]\n",
+      "\n",
+      "Resumo dos dados após limpeza:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9994 entries, 0 to 9993\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column         Non-Null Count  Dtype         \n",
+      "---  ------         --------------  -----         \n",
+      " 0   Row ID         9994 non-null   int64         \n",
+      " 1   Order ID       9994 non-null   object        \n",
+      " 2   Order Date     9994 non-null   datetime64[ns]\n",
+      " 3   Ship Date      9994 non-null   datetime64[ns]\n",
+      " 4   Ship Mode      9994 non-null   object        \n",
+      " 5   Customer ID    9994 non-null   object        \n",
+      " 6   Customer Name  9994 non-null   object        \n",
+      " 7   Segment        9994 non-null   object        \n",
+      " 8   Country        9994 non-null   object        \n",
+      " 9   City           9994 non-null   object        \n",
+      " 10  State          9994 non-null   object        \n",
+      " 11  Postal Code    9994 non-null   int64         \n",
+      " 12  Region         9994 non-null   object        \n",
+      " 13  Product ID     9994 non-null   object        \n",
+      " 14  Category       9994 non-null   object        \n",
+      " 15  Sub-Category   9994 non-null   object        \n",
+      " 16  Product Name   9994 non-null   object        \n",
+      " 17  Sales          9994 non-null   float64       \n",
+      " 18  Quantity       9994 non-null   int64         \n",
+      " 19  Discount       9994 non-null   float64       \n",
+      " 20  Profit         9994 non-null   float64       \n",
+      "dtypes: datetime64[ns](2), float64(3), int64(3), object(13)\n",
+      "memory usage: 1.6+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Order Date'] = pd.to_datetime(df['Order Date'], errors='coerce')\n",
+    "df['Ship Date'] = pd.to_datetime(df['Ship Date'], errors='coerce')\n",
+    "\n",
+    "print(\"Datas não convertidas (nulos após conversão):\")\n",
+    "print(df[['Order Date', 'Ship Date']].isnull().sum())\n",
+    "\n",
+    "duplicatas = df.duplicated().sum()\n",
+    "print(f\"Número de registros duplicados: {duplicatas}\")\n",
+    "df = df.drop_duplicates()\n",
+    "\n",
+    "categorias = ['Ship Mode', 'Segment', 'Country', 'Region', 'Category', 'Sub-Category']\n",
+    "for coluna in categorias:\n",
+    "    print(f\"\\nValores únicos em {coluna}:\")\n",
+    "    print(df[coluna].value_counts())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"\\nValores únicos para 'Country':\")\n",
+    "print(df['Country'].unique())\n",
+    "\n",
+    "print(\"\\nDescontos fora do padrão (esperado entre 0 e 0.8):\")\n",
+    "print(df[df['Discount'] > 0.8])\n",
+    "\n",
+    "print(\"\\nValores negativos:\")\n",
+    "print(df[(df['Sales'] < 0) | (df['Quantity'] < 0) | (df['Postal Code'] < 0)])\n",
+    "\n",
+    "print(\"\\nResumo dos dados após limpeza:\")\n",
+    "print(df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62e07397",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
