divisão Hold-out e regressao

--- a/Notebooks/trabalhoII.ipynb
+++ b/Notebooks/trabalhoII.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "c7100ff7",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c43f6b2f",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "216a1f18",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0bd3447b",
    "metadata": {},
    "outputs": [
@@ -641,11 +641,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "62e07397",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho do conjunto de treino: 6995 registros\n",
+      "Tamanho do conjunto de teste: 2999 registros\n",
+      "\n",
+      "Distribuição das classes no treino:\n",
+      "Profit_Positive\n",
+      "1    5606\n",
+      "0    1389\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Distribuição das classes no teste:\n",
+      "Profit_Positive\n",
+      "1    2452\n",
+      "0     547\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "df['Profit_Positive'] = (df['Profit'] > 0).astype(int)\n",
+    "\n",
+    "\n",
+    "X = df[['Sales', 'Quantity', 'Discount']]\n",
+    "y = df['Profit_Positive']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Verificar tamanho dos conjuntos\n",
+    "print(f\"Tamanho do conjunto de treino: {X_train.shape[0]} registros\")\n",
+    "print(f\"Tamanho do conjunto de teste: {X_test.shape[0]} registros\")\n",
+    "\n",
+    "# Verificar distribuição das classes\n",
+    "print(\"\\nDistribuição das classes no treino:\")\n",
+    "print(y_train.value_counts())\n",
+    "\n",
+    "print(\"\\nDistribuição das classes no teste:\")\n",
+    "print(y_test.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13aed0e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Regressão Logística:\n",
+      "Acurácia: 0.9369789929976658\n",
+      "Precisão: 0.93170545593285\n",
+      "Recall: 0.9959216965742251\n",
+      "F1-score: 0.9627439384979303\n",
+      "Matriz de Confusão:\n",
+      " [[ 368  179]\n",
+      " [  10 2442]]\n",
+      "\n",
+      "Árvore de Decisão:\n",
+      "Acurácia: 0.9323107702567522\n",
+      "Precisão: 0.9569280780170663\n",
+      "Recall: 0.9604404567699837\n",
+      "F1-score: 0.9586810502747812\n",
+      "Matriz de Confusão:\n",
+      " [[ 441  106]\n",
+      " [  97 2355]]\n",
+      "\n",
+      "Random Forest:\n",
+      "Acurácia: 0.934644881627209\n",
+      "Precisão: 0.9559417946645109\n",
+      "Recall: 0.9645187601957586\n",
+      "F1-score: 0.9602111246447422\n",
+      "Matriz de Confusão:\n",
+      " [[ 438  109]\n",
+      " [  87 2365]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#regressao Logistica\n",
+    "modelo_lr = LogisticRegression(random_state=42)\n",
+    "modelo_lr.fit(X_train, y_train)\n",
+    "y_pred_lr = modelo_lr.predict(X_test)\n",
+    "\n",
+    "print(\"\\nRegressão Logística:\")\n",
+    "print(\"Acurácia:\", accuracy_score(y_test, y_pred_lr))\n",
+    "print(\"Precisão:\", precision_score(y_test, y_pred_lr))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_lr))\n",
+    "print(\"F1-score:\", f1_score(y_test, y_pred_lr))\n",
+    "print(\"Matriz de Confusão:\\n\", confusion_matrix(y_test, y_pred_lr))\n",
+    "\n",
+    "\n",
+    "#arvore de decisao\n",
+    "modelo_tree = DecisionTreeClassifier(random_state=42)\n",
+    "modelo_tree.fit(X_train, y_train)\n",
+    "y_pred_tree = modelo_tree.predict(X_test)\n",
+    "\n",
+    "print(\"\\nÁrvore de Decisão:\")\n",
+    "print(\"Acurácia:\", accuracy_score(y_test, y_pred_tree))\n",
+    "print(\"Precisão:\", precision_score(y_test, y_pred_tree))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_tree))\n",
+    "print(\"F1-score:\", f1_score(y_test, y_pred_tree))\n",
+    "print(\"Matriz de Confusão:\\n\", confusion_matrix(y_test, y_pred_tree))\n",
+    "\n",
+    "\n",
+    "#random forest\n",
+    "modelo_rf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+    "modelo_rf.fit(X_train, y_train)\n",
+    "y_pred_rf = modelo_rf.predict(X_test)\n",
+    "\n",
+    "print(\"\\nRandom Forest:\")\n",
+    "print(\"Acurácia:\", accuracy_score(y_test, y_pred_rf))\n",
+    "print(\"Precisão:\", precision_score(y_test, y_pred_rf))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_rf))\n",
+    "print(\"F1-score:\", f1_score(y_test, y_pred_rf))\n",
+    "print(\"Matriz de Confusão:\\n\", confusion_matrix(y_test, y_pred_rf))\n",
+    "\n",
+    "\n",
+    "#SVM\n",
+    "modelo_svm = SVC(kernel='linear', random_state=42)\n",
+    "modelo_svm.fit(X_train, y_train)\n",
+    "y_pred_svm = modelo_svm.predict(X_test)\n",
+    "\n",
+    "print(\"\\nSVM:\")\n",
+    "print(\"Acurácia:\", accuracy_score(y_test, y_pred_svm))\n",
+    "print(\"Precisão:\", precision_score(y_test, y_pred_svm))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_svm))\n",
+    "print(\"F1-score:\", f1_score(y_test, y_pred_svm))\n",
+    "print(\"Matriz de Confusão:\\n\", confusion_matrix(y_test, y_pred_svm))\n",
+    "\n",
+    "\n",
+    "#KNN\n",
+    "modelo_knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "modelo_knn.fit(X_train, y_train)\n",
+    "y_pred_knn = modelo_knn.predict(X_test)\n",
+    "\n",
+    "print(\"\\nKNN:\")\n",
+    "print(\"Acurácia:\", accuracy_score(y_test, y_pred_knn))\n",
+    "print(\"Precisão:\", precision_score(y_test, y_pred_knn))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_knn))\n",
+    "print(\"F1-score:\", f1_score(y_test, y_pred_knn))\n",
+    "print(\"Matriz de Confusão:\\n\", confusion_matrix(y_test, y_pred_knn))"
+   ]
   }
  ],
  "metadata": {
