--- a/Notebooks/trabalhoII.ipynb
+++ b/Notebooks/trabalhoII.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "id": "c7100ff7",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "c43f6b2f",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "216a1f18",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "0bd3447b",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "62e07397",
    "metadata": {},
    "outputs": [
@@ -667,9 +667,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "\n",
     "df['Profit_Positive'] = (df['Profit'] > 0).astype(int)\n",
     "\n",
     "\n",
@@ -693,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "960da63e",
    "metadata": {},
    "outputs": [],
@@ -709,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "61a7b838",
    "metadata": {},
    "outputs": [
@@ -851,6 +848,18 @@
     "    plt.ylabel(\"Verdadeiro\")\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40bd6ca1",
+   "metadata": {},
+   "source": [
+    "Depois de rodar e olhar os números, vi que a Regressão Logística foi a melhor no geral.\n",
+    "\n",
+    "As Árvores de Decisão e o Random Forest também se saíram bem. Eles tiveram notas parecidas com a Regressão Logística, mostrando que são boas opções também.\n",
+    "\n",
+    "O K-NN ficou no meio do caminho, mas o SVM foi o que teve o pior desempenho."
    ]
   }
  ],
